--- a/ML comparison - project_Healthcare.ipynb
+++ b/ML comparison - project_Healthcare.ipynb
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### D) Record Accuracy Scores for the build models"
+    "### D) Record Accuracy Scores for the built models"
    ]
   },
   {
